Spacing correction

--- a/style.css
+++ b/style.css
@@ -293,12 +293,12 @@ p {
 }
 
 .hobbies p {
-    margin-top: 1rem;
+    margin-top: 2rem;
     text-align: center;
 }
 
 .hobbies a {
-    margin-top: 1.5rem;
+    margin-top: 2rem;
     text-align: center;
     color: #fff;
     width: 100%;
@@ -324,7 +324,7 @@ p {
     .profile .profile-card .container .flex-row{
         scale: 0.9;
     }
-    
+
     .profile .profile-card .container .text-wrap {
         margin: 0 1.5rem;
     } 
